feat: 添加新手教程并改进JSON文件导入处理
- 在首页添加新手教程说明框，包含操作步骤指南
- 为教程框添加样式，使用醒目的黄色背景和适当排版
- 改进文件导入功能，增加对JSON注释和尾随逗号的处理
- 优化错误提示信息，显示更详细的错误原因

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <body>
 
     <div class="container">
+        <div class="tutorial-box">
+            <h3>📖 新手教程</h3>
+            <p>1. 点击 <strong>[📂 导入新文件]</strong> 加载游戏目录下的 <code>gameplay_variables.json</code>。</p>
+            <p>2. 在下方修改参数数值。</p>
+            <p>3. 点击 <strong>[💾 导出文件]</strong>，将下载的文件覆盖回游戏目录即可生效。</p>
+        </div>
+
         <div class="actions">
             <span><strong>Norland 配置文件编辑器</strong></span>
             <div>
