--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p>1. 点击 <strong>[📂 导入新文件]</strong> 加载游戏目录下的 <code>gameplay_variables.json</code>。</p>
             <p>2. 在下方修改参数数值。</p>
             <p>3. 点击 <strong>[💾 导出文件]</strong>，将下载的文件覆盖回游戏目录即可生效。</p>
+            <p class="note">⚠️ 注：当前内置默认版本为 <code>v0.4927.8378.0</code>，如游戏版本不同请务必使用导入功能。</p>
         </div>
 
         <div class="actions">
